crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__translate__tests__20_media_track_previous.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: MediaTrackPrevious,
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
