crates/term-wm-crossterm-adapter/src/snapshots/term_wm_crossterm_adapter__translate__tests__2_tab.snap
---
source: crates/term-wm-crossterm-adapter/src/lib.rs
expression: result
---
Some(
    Key(
        KeyEvent {
            code: Tab,
            modifiers: KeyModifiers {
                shift: false,
                control: false,
                alt: false,
            },
            kind: Press,
        },
    ),
)
